change favicon and logo

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ kramdown:
 #
 owner:
   name: UAB 中国学生学者联合会
-  avatar: leonids-logo.png
+  avatar: UABCSSA_logo.png
   job: "at Birmingham, AL"
   bio: "UAB 中国学生学者联合会旨在为大家提供便利，分享租房，购物，美食，旅游，体育活动，二手交易等信息。并且我们为新生提供入学帮助，接机，安排短暂住宿等。"
   email: cssauab@gmail.com
