--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: UA-105089812-1
     verify:
     ad-client:
     ad-slot:
