--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone:          US
 markdown:          kramdown
 highlighter:       rouge
 excerpt_separator: <!--more-->
-# permalink:         /articles/:year-:month/:title
+permalink:         /:year-:month/:title.html
 
 kramdown:
   auto_ids: true
